#5 docs: mysql 컨테이너에 데이터베이스 설정 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - 3306:3306
     environment:
       - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=second_hand
   redis:
     container_name: second_hand_redis
     image: redis:latest
