--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   profiles:
     group:
-      local: local
-      dev: dev
+      local: local, secret
+      dev: dev, secret
     default: local
 ---
 spring:
