--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,6 +29,10 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // S3
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.518'
+    testImplementation 'com.amazonaws:aws-java-sdk-s3:1.12.518'
 }
 
 tasks.named('test') {
