--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - TZ=Asia/Seoul
     depends_on:
+      - db
       - redis
   db:
     container_name: second_hand_db
@@ -18,6 +19,7 @@ services:
       - 3306:3306
     environment:
       - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=second_hand
   redis:
     container_name: second_hand_redis
     image: redis:latest
