[feat] 회원가입 서비스 기능 구현 (#16)
* #5 docs: mysql 컨테이너에 데이터베이스 설정 추가

* #5 fix: Member 엔티티 필드 멤버명 변경

* #5 fix: Member 엔티티 필드 멤버명 변경

* #5 feat: 에러코드 모듈 및 예외 핸들러 구현

* #5 feat: API 응답 구현

- 모든 API가 동일한 형식의 응답할 수 있도록 응답 클래스를 정의하였습니다

* #5 fix: httpStatus 멤버 제거

* #5 rename: 클래스 파일 이동

* refactor : 패키지 구조 변경

* #5 feat: login api 추가

* #5 docs: app 서비스에 db depdends_on 설정

* #5 docs: 프로파일에 secret 프로파일 설정

* #5 test: 로그인 서비스 테스트 코드 추가

* #5 feat: 로그인 요청에 대한 Request/Response 클래스 정의

* #5 feat: 로그인 서비스에 대한 주석 추가

* #5 add: webflux 의존성 추가

- 회원가입/로그인 서비스 구현시 oauth서버와 통신하기 위해서 추가하였습니다.
- WebClient 클래스를 사용하여 통신합니다.

* #5 chore: Dockerfile 빌드 레이어 추가

- 사전에 빌드하고 Dockerfile을 빌드하지 않고 바로 할 수 있도록 빌드 명령어를 추가하였습니다.

* #4 feat: Oauth, Provider 관련 enum 에러 코드 추가

- ProviderErrorCode는 입력으로 받은 provider를 찾지 못할때 발생하는 에러를 담고 있습니다.
- OauthErrorCode는 Oauth 로그인시 발생할 수 있는 에러를 담고 있습니다.

* #4 fix: 구현하지 않은 마크 클래스 제거

* #5 feat: Api 응답 클래스 추가

- 클라이언트에게 동일한 형식의 응답을 주기 위하여 정의하였습니다.

* #5 feat: signup 서비스 구현

- 회원가입 서비스는 클라이언트에게 로그인 아이디, 프로필 사진, 소셜 로그인에 대한 인가 코드를 받아 회원가입을 진행하는 서비스입니다.

* #5 feat: OauthClient 클래스 추가

- OauthClient는 Oauth 서버와 통신하며 액세스 토큰이나 유저 프로필 정보를 가져오는 역할을 수행합니다.

* #5 docs: 로컬 개발 환경에 디버깅 레벨을 디버그 레벨로 설정

- 개발하면서 디버그 레벨 이상의 로그를 보기 위해서 설정하였습니다.

* #5 feat: Oauth 응답 클래스 추가

- OauthAccessTokenResponse : 발급받은 액세스 토큰을 저장하기 위한 객체
- OauthSignUpResponse : 소셜 로그인을 통해 회원가입한 정보를 저장하기 위한 객체
- OauthUserProfileResponse : 리소스 서버로부터 유저 프로필 정보를 담기 위한 객체

* #5 feat: Oauth 회원가입 요청 객체 추가

- 클라이언트로부터 받은 로그인 아이디와 동네 이름을 저장하는 객체입니다.

* #5 feat: 상품 클래스에 수정 시간 추가

* #5 feat: Member, MemberTown 엔티티 객체 추가

- Member와 MemberTown 엔티티는 일대다 단방향 관계입니다.

* #5 feat: 회원 저장소에 findMemberByNicknameIs 추가

- 닉네임에 따른 회원을 조회합니다.

* #5 feat: oauth 정보를 담는 클래스 추가

* #5 test: 단위 테스트, 통합 테스트를 도와주는 서포트 테스트 클래스 추가

- 해당 클래스의 필드멤버에 필요한 객체들을 정의하여 사용합니다.

* #5 test: oauth 관련 테스트 코드 추가

* #5 test: 회원 addTown 메소드의 테스트 코드 추가

* #5 test: InMemoryProvider

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   profiles:
     group:
-      local: local, secret
-      dev: dev, secret
+      local: local, secret, s3
+      dev: dev, secret, s3
     default: local
 ---
 spring:
@@ -20,17 +20,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
-cloud:
-  aws:
-    credentials:
-      access-key: ${aws.access-key}
-      secret-key: ${aws.secret-key}
-    region:
-      static: ap-northeast-2
-    stack:
-      auto: false
-    s3:
-      bucket: ${aws.s3.bucket}
+
+logging:
+  level:
+    codesquard: debug
 ---
 
 spring:
@@ -48,6 +41,13 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: s3
 
 cloud:
   aws:
