--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -35,6 +35,11 @@ dependencies {
     // S3
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.518'
     testImplementation 'com.amazonaws:aws-java-sdk-s3:1.12.518'
+
+    // Jwt
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 tasks.named('test') {
