--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -68,17 +68,17 @@ jobs:
     steps:
       - uses: actions/checkout@master
       # nginx-dev.conf 파일을 EC2에 업로드
-      - name: copy nginx-dev.conf file via ssh password
+      - name: copy nginx.conf file via ssh password
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ec2-user
           key: ${{ secrets.PRIVATE_KEY }}
           port: 22
-          source: "./nginx/nginx-dev.conf"
+          source: "./nginx/nginx.conf"
           target: "/home/ec2-user/"
       # docker-compose.yml 파일을 EC2에 업로드
-      - name: copy docker-compose-dev file via ssh password
+      - name: copy docker-compose file via ssh password
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
@@ -97,7 +97,7 @@ jobs:
           port: 22
           script: |
             sudo chmod 666 /var/run/docker.sock
-            docker-compose -f docker-compose-dev.yml down -v
-            docker-compose -f docker-compose-dev.yml pull
-            docker-compose -f docker-compose-dev.yml up -d
+            docker-compose down -v
+            docker-compose pull
+            docker-compose up -d
             docker image prune -f
