#6 fix: 배포 설정 수정

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -20,6 +20,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
   redis:
     host: localhost
     port: 6379
@@ -40,11 +41,22 @@ spring:
     username: ${db.dev.datasource.username}
     password: ${db.dev.datasource.password}
   jpa:
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
+  redis:
+    host: redis
+    port: 6379
+
+
+logging:
+  level:
+    codesquard: debug
 
 ---
 
