--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -51,7 +51,7 @@ jobs:
         run: chmod +x ./gradlew
       # Gradle을 이용하여 빌드 수행
       - name: Build with Gradle
-        run: ./gradlew build -x test
+        run: ./gradlew bootJar
       # docker build & push to develop
       - name: Docker build & push to dev
         run: |
@@ -67,7 +67,7 @@ jobs:
     environment: dev
     steps:
       - uses: actions/checkout@master
-      # nginx-dev.conf 파일을 EC2에 업로드
+      # nginx.conf 파일을 EC2에 업로드
       - name: copy nginx.conf file via ssh password
         uses: appleboy/scp-action@master
         with:
@@ -77,15 +77,15 @@ jobs:
           port: 22
           source: "./nginx/nginx.conf"
           target: "/home/ec2-user/"
-      # docker-compose.yml 파일을 EC2에 업로드
-      - name: copy docker-compose file via ssh password
+      # docker-compose-dev.yml 파일을 EC2에 업로드
+      - name: copy docker-compose-dev file via ssh password
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ec2-user
           key: ${{ secrets.PRIVATE_KEY }}
           port: 22
-          source: "docker-compose.yml"
+          source: "docker-compose-dev.yml"
           target: "/home/ec2-user/"
       # docker-compose 실행
       - name: Deploy to dev
@@ -97,7 +97,7 @@ jobs:
           port: 22
           script: |
             sudo chmod 666 /var/run/docker.sock
-            docker-compose down -v
-            docker-compose pull
-            docker-compose up -d
+            docker-compose -f docker-compose-dev.yml down -v
+            docker-compose -f docker-compose-dev.yml pull
+            docker-compose -f docker-compose-dev.yml up -d
             docker image prune -f
