--- a/backend/docker-compose-dev.yml
+++ b/backend/docker-compose-dev.yml
@@ -2,9 +2,7 @@ version: "3.8"
 services:
   app:
     container_name: second_hand_app
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    image: yhkim951107/second_hand_app
     ports:
       - 8080:8080
     environment:
@@ -12,16 +10,27 @@ services:
     depends_on:
       - db
       - redis
+    networks:
+      - backend_net
+
   db:
     container_name: second_hand_db
     image: mysql:latest
     ports:
       - 3306:3306
     environment:
+      - MYSQL_USER=admin
+      - MYSQL_PASSWORD=second_hand
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=second_hand
+    networks:
+      - backend_net
   redis:
     container_name: second_hand_redis
     image: redis:latest
     ports:
       - 6379:6379
+    networks:
+      - backend_net
+networks:
+  backend_net:
