#6 docs: 배포 설정 추가
- env 파일 추가
- docker-compose local, dev 구분하여 작성
- local는 Dockerfile을 빌드하여 수행, dev는 도커 허브에서 가져와서 실행

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -77,6 +77,16 @@ jobs:
           port: 22
           source: "./nginx/nginx.conf"
           target: "/home/ec2-user/"
+      # .env 파일을 EC2에 업로드
+      - name: copy .env file
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ec2-user
+          key: ${{ secrets.PRIVATE_KEY }}
+          port: 22
+          source: "./backend/.env"
+          target: "/home/ec2-user/"
       # docker-compose-dev.yml 파일을 EC2에 업로드
       - name: copy docker-compose-dev file via ssh password
         uses: appleboy/scp-action@master
@@ -96,6 +106,7 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }} # pem 키
           port: 22
           script: |
+            cd ./backend
             sudo chmod 666 /var/run/docker.sock
             docker-compose -f docker-compose-dev.yml down -v
             docker-compose -f docker-compose-dev.yml pull
