--- a/backend/docker-compose-local.yml
+++ b/backend/docker-compose-local.yml
@@ -2,7 +2,9 @@ version: "3.8"
 services:
   app:
     container_name: second_hand_app
-    image: yhkim951107/second_hand_app
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - 8080:8080
     environment:
