--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -77,6 +77,13 @@ jobs:
           port: 22
           source: "./nginx/nginx.conf"
           target: "/home/ec2-user/"
+      # .env 파일 생성
+      - name: make .env file
+        run: |
+          cd ./backend
+          touch ./.env
+          echo "${{ secrets.ENV }}" > ./.env
+        shell: bash
       # .env 파일을 EC2에 업로드
       - name: copy .env file
         uses: appleboy/scp-action@master
