[feat] CI/CD 파이프라인 구축 (#20)
* #6 docs: cicd 설정 추가

* #6 fix: nginx, docker-comppose 오타 수정

* #6 fix: 배포 설정 수정

* #6 fix: 경로 수정

* #6 docs: 배포 설정 추가

- env 파일 추가
- docker-compose local, dev 구분하여 작성
- local는 Dockerfile을 빌드하여 수행, dev는 도커 허브에서 가져와서 실행

* #6 docs: .env 파일 추가 스크립트 작성

* #6 feat: cors 필터 추가

* #6 feat: web 서비스 컨테이너 추가

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
       local: local, secret, s3
       dev: dev, secret, s3
     default: local
+
 ---
 spring:
   config:
@@ -15,11 +16,14 @@ spring:
     username: ${db.local.datasource.username}
     password: ${db.local.datasource.password}
   jpa:
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
       ddl-auto: create
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
   redis:
     host: localhost
     port: 6379
@@ -40,11 +44,22 @@ spring:
     username: ${db.dev.datasource.username}
     password: ${db.dev.datasource.password}
   jpa:
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
+  redis:
+    host: redis
+    port: 6379
+
+
+logging:
+  level:
+    codesquard: info
 
 ---
 
