--- a/backend/docker-compose-local.yml
+++ b/backend/docker-compose-local.yml
@@ -4,7 +4,7 @@ services:
     container_name: second_hand_app
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile-local
     ports:
       - 8080:8080
     environment:
