--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -24,9 +24,14 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.MySQL8Dialect
+    defer-datasource-initialization: true
   redis:
     host: localhost
     port: 6379
+  sql:
+    init:
+      mode: always
+      data-locations: classpath*:db/mysql/data.sql
 
 
 logging:
