#84 docs: 테스트 프로파일 추가

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,6 +3,7 @@ spring:
     group:
       local: local, secret, s3
       dev: dev, secret, s3
+      test: test, secret, s3
     default: local
 
 ---
@@ -67,6 +68,34 @@ logging:
   level:
     codesquard: info
 
+---
+
+spring:
+  config:
+    activate:
+      on-profile: test
+  datasource:
+    url: ${db.local.datasource.url}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: ${db.local.datasource.username}
+    password: ${db.local.datasource.password}
+  jpa:
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
+    defer-datasource-initialization: true
+    show-sql: true
+  redis:
+    host: localhost
+    port: 6379
+logging:
+  level:
+    codesquard: debug
 ---
 
 spring:
