#118 docs: jackson visibility 옵션 설정
- 필드로만 직렬화 될 수 있도록 설정

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,6 +6,13 @@ spring:
       test: test, secret, s3
     default: local
 
+  jackson:
+    visibility:
+      field: any
+      is-getter: none
+      getter: none
+      setter: none
+      creator: none
 ---
 spring:
   config:
