--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -61,7 +61,7 @@ spring:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         format_sql: true
@@ -76,34 +76,6 @@ logging:
     codesquard: info
 
 ---
-spring:
-  config:
-    activate:
-      on-profile: test
-  datasource:
-    url: ${db.local.datasource.url}
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: ${db.local.datasource.username}
-    password: ${db.local.datasource.password}
-  jpa:
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQL8Dialect
-    hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-        format_sql: true
-        dialect: org.hibernate.dialect.MySQL8Dialect
-    defer-datasource-initialization: true
-    show-sql: true
-  redis:
-    host: localhost
-    port: 6379
-logging:
-  level:
-    codesquard: debug
----
-
 spring:
   config:
     activate:
